pulldown menu edit

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 							<option value="NowChoosedTownAndVillage">市町村名</option>
 							<option value="NowChoosedBuilding">建物、橋</option>
 							<option value="NowChoosedMountains">山</option>
-							<option value="NowChoosedWaters">川、湖、海</option>
-							<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
+							<option value="NowChoosedWaters">水域</option>
+							<option value="NowChoosedHighway">道路、交差点</option>
 							<option value="NowChoosedMinorRoads">その他道路、歩道など</option>
 							<option value="NowChoosedTransit">公共交通機関（バス、電車）など</option>
 						</select>
@@ -130,11 +130,13 @@
 						<div class="selectdiv_PC">
 							<select id="ColoredLayer_PC" name="ColoredLayer_PC">
 								<option value="NotChoosed">選択してください</option>
+								<option value="NowChoosedMotorway">国道、高速道路</option>
+								<option value="NowChoosedRoad">地方道路</option>
+								<option value="NowChoosedMinorRoad">その他道路</option>
+								<option value="NowChoosedRoadPedestrian">歩道</option>
 								<option value="NowChoosedBackGround">背景の土地</option>
 								<option value="NowChoosedBuilding">建物、橋</option>
-								<option value="NowChoosedWaters">川、湖、海</option>
-								<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
-								<option value="NowChosedMinorRoads">その他道路、歩道など</option>
+								<option value="NowChoosedWaters">水域</option>
 							</select>
 						</div>
 					<div id="swatches_PC"></div>
@@ -186,6 +188,7 @@
 					</div>
 				</div>
 				<div class="EditPanel2">
+					<h3>文字の表示/非表示</h3>
 					<div class="EditPanel2-1">
 						<div class="ToggleSwich">
 							<input type="checkbox" id="country_SP" checked="checked" name="layer" value="country_SP" onchange="toggle5()"/>
@@ -235,8 +238,8 @@
 							<option value="NowChoosedTownAndVillage">市町村名</option>
 							<option value="NowChoosedBuilding">建物、橋</option>
 							<option value="NowChoosedMountains">山</option>
-							<option value="NowChoosedWaters">川、湖、海</option>
-							<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
+							<option value="NowChoosedWaters">水域</option>
+							<option value="NowChoosedHighway">道路、交差点</option>
 							<option value="NowChoosedMinorRoads">その他道路、歩道など</option>
 							<option value="NowChoosedTransit">公共交通機関（バス、電車）など</option>
 						</select>
@@ -253,11 +256,13 @@
 					<div class="selectdiv">
 						<select id="ColoredLayer_SP" name="ColoredLayer_SP">
 							<option value="NotChoosed">選択してください</option>
+							<option value="NowChoosedMotorway">国道、高速道路</option>
+							<option value="NowChoosedRoad">地方道路</option>
+							<option value="NowChoosedMinorRoad">その他道路</option>
+							<option value="NowChoosedRoadPedestrian">歩道</option>
 							<option value="NowChoosedBackGround">背景の土地</option>
 							<option value="NowChoosedBuilding">建物、橋</option>
-							<option value="NowChoosedWaters">川、湖、海</option>
-							<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
-							<option value="NowChosedMinorRoads">その他道路、歩道など</option>
+							<option value="NowChoosedWaters">水域</option>
 						</select>
 					</div>
 					<div id="swatches_SP"></div>
