--- a/index_background.html
+++ b/index_background.html
@@ -93,7 +93,7 @@
 					</div>
 				</div>
 				<div class="EditPanel3">
-					<h3>文字の大きさ調整</h3>
+					<h3>文字の大きさの調整</h3>
 					<div class="selectdiv_PC">
 						<select id="ChoosedLayer_PC" name="ChoosedLayer_PC" onchange="ChoosingLayer_PC()">
 							<option value="NotChoosed">選択してください</option>
